# GeneticProgrammingAlgorithms

./: README.md  pyproject.toml  requirements.txt
FIGP/: FIGP_functions.py  FIGP_model_definition_functions.py  README.md  main_functions.py
IGP/: GP_model_definition_functions.py  IGP_functions.py  IGP_model_definition_functions.py  README.md  main_functions.py
MGGP/: MGGP_functions.py  MGGP_model_defintion_functions.py  README.md  main_functions.py
examples/control/: control_config.yaml  main_control.py  plot_functions.py  propagation_functions.py
examples/control/benchmarks/inverted_pendulum/: Plant.py  dynamics.py  evaluate.py  fitness_reference.npy  generate_reference.py  time_points.npy  u_ref.npy  x_ref.npy
examples/regression/: evaluate_functions.py  main_regression.py  regression_config.yaml
examples/regression/data/: data_handling.py
src/: MGGP_utils.py  evolutionary_strategies.py  gp_model_definition_functions.py  main_functions.py  mutation_functions.py  niches_manipulation.py  pop_classes.py  pop_init.py  primitive_set.py  recombination_functions.py  selection_functions.py  utils.py
src/genetic_programming_algorithms/: MGGP_utils.py  bloat_control.py  crossover_functions.py  evolutionary_strategies.py  gp_model_definition_functions.py  main_functions.py  mutation_functions.py  pop_classes.py  pop_init.py  primitive_set.py  recombination_functions.py
