[project]
name = "geneticprogrammingalgorithms"
version = "0.1.0"
description = "This repo contains the Genetic Programming algorithms developed by Francesco Marchetti."
authors = [
    {name = "Francesco Marchetti"}
]
license = {text = "MPL-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false