[project]
name = "genetic-programming-algorithms"
version = "0.1.0"
description = "This repo contains genetic programming algorithms developed by Francesco Marchetti."
authors = [
    {name = "Francesco Marchetti",email = "framarc93@gmail.com"}
]
license = {text = "MPL-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deap (==1.4.3)",
    "multiprocess (==0.70.18)",
    "numpy (==2.2.6)",
    "certifi (==2025.6.15)",
    "charset-normalizer (==3.4.2)",
    "contourpy (==1.3.2)",
    "cycler (==0.12.1)",
    "dill (==0.4.0)",
    "fonttools (==4.58.4)",
    "idna (==3.10)",
    "joblib (==1.5.1)",
    "kiwisolver (==1.4.8)",
    "matplotlib (==3.10.3)",
    "packaging (==25.0)",
    "pandas (==2.3.0)",
    "pillow (==11.2.1)",
    "pmlb (==1.0.2a0)",
    "pyparsing (==3.2.3)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "PyYAML (==6.0.2)",
    "requests (==2.32.4)",
    "scikit-learn (==1.7.0)",
    "scipy (==1.15.3)",
    "six (==1.17.0)",
    "threadpoolctl (==3.6.0)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
